tests/invalid/det_errors.err_exp
det_errors.m:005: In `p1(in)':
det_errors.m:005:   error: determinism declaration not satisfied.
det_errors.m:005:   Declared `det', inferred `semidet'.
det_errors.m:014:   In argument 1 of clause head:
det_errors.m:014:   unification of `HeadVar__1' and `42' can fail.
det_errors.m:006: In `p2(in)':
det_errors.m:006:   error: determinism declaration not satisfied.
det_errors.m:006:   Declared `det', inferred `semidet'.
det_errors.m:015:   Unification of `X' and `42' can fail.
det_errors.m:007: In `p3(in)':
det_errors.m:007:   error: determinism declaration not satisfied.
det_errors.m:007:   Declared `det', inferred `semidet'.
det_errors.m:016:   Unification of `X' and `42' can fail.
det_errors.m:008: In `p4(in)':
det_errors.m:008:   error: determinism declaration not satisfied.
det_errors.m:008:   Declared `det', inferred `semidet'.
det_errors.m:017:   In argument 2 of functor `+/2':
det_errors.m:017:   unification with `21' can fail.
For more information, try recompiling with `-E'.
